<resources>
    <string name="app_name">Plant Watering App</string>
    <string name="main_username_hint">Insert username</string>
    <string name="main_password_hint">Insert password</string>
    <string name="main_login_button">Login</string>
    <string name="main_register_button">Register</string>
    <string name="main_settings_button">settings</string>
    <string name="register_confirm_button">Confirm</string>
    <string name="register_password_confirmation_hint">Insert password confirmation</string>
    <string name="register_password_hint">Insert password</string>
    <string name="register_e_mail_hint">Insert E-mail</string>
    <string name="register_last_name_hint">Insert last name</string>
    <string name="register_first_name_hint">Insert first name</string>
    <string name="preferences_debug_server_ip_key">preference_debug_server_ip</string>
    <string name="error">Error</string>
    <string name="loding_data_message">Loading data…</string>
    <string name="plant_add_hint_name">Plant name</string>
    <string name="plant_add_hint_descsription">Plant descsription</string>

    <string name="plant_show_temp_plot_button">Show temperature plot</string>
    <string name="plant_watering_button">Watering</string>
    <string name="plant_show_hum_plot_button">Show humidity plot</string>
</resources>
