<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/main_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_title"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/main_username_hint"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/main_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_username"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/main_password_hint"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/main_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_password"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:onClick="login"
        android:text="@string/main_login_button" />


    <Button
        android:id="@+id/main_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_settings_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:onClick="register"
        android:text="@string/main_register_button" />


    <ImageView
        android:id="@id/main_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/main_settings_button"
        android:foregroundGravity="bottom"
        android:onClick="settings"
        android:src="@drawable/ic_settings" />
</RelativeLayout>

