<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activity.RegisterActivity">

    <EditText
        android:id="@+id/register_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/register_first_name_hint"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/register_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_first_name"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/register_last_name_hint"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_last_name"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/register_e_mail_hint"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/register_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/register_password_confirmation_hint"
        android:inputType="textPassword"
        tools:ignore="Autofill" />


    <Button
        android:id="@+id/register_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_confirmation"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:onClick="confirmRegistration"
        android:text="@string/register_confirm_button" />

    <ProgressBar
        android:id="@+id/register_confirm_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_confirmation"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:translationZ="2dp"
        android:visibility="gone" />


</RelativeLayout>