<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/plant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/plant_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plant_name"
            android:layout_marginBottom="18dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />

        <Button
            android:id="@+id/plant_temp_plot_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plant_description"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/plant_show_temp_plot_button" />

        <Button
            android:id="@+id/plant_hum_plot_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plant_temp_plot_button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/plant_show_hum_plot_button" />

        <Button
            android:id="@+id/plant_watering_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plant_hum_plot_button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/plant_watering_button" />
    </RelativeLayout>


</ScrollView>